gccida/c3/expand_twoval_binop
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2388:27: error: unknown type name 'optab_0'; did you mean 'optab'?
int  expand_twoval_binop( optab_0 binoptab, rtx op0, rtx op1, rtx targ0, rtx targ1, int unsignedp) 
                          ^~~~~~~
                          optab
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2401:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2402:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2404:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2407:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2408:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2419:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode x; // [rsp+20h] [rbp-68h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2446:20: error: use of undeclared identifier 'machine_mode'
v11 = force_reg( ( machine_mode)v10, v11); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2454:20: error: use of undeclared identifier 'machine_mode'
v12 = force_reg( ( machine_mode)v10, v12); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2468:27: error: use of undeclared identifier 'machine_mode'
operand0 = gen_reg_rtx( ( machine_mode)v10); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2472:22: error: use of undeclared identifier 'machine_mode'
v17 = gen_reg_rtx( ( machine_mode)v10); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2481:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2516:39: error: use of undeclared identifier 'machine_mode'
if ( !operand->predicate( operand0, ( machine_mode)v10) || !operand[3].predicate( to, ( machine_mode)v10) ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2516:89: error: use of undeclared identifier 'machine_mode'
if ( !operand->predicate( operand0, ( machine_mode)v10) || !operand[3].predicate( to, ( machine_mode)v10) ) 
                                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2518:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v28 = insn_data_0[v46].genfun( operand0, operand1); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2518:30: error: called object type '<dependent type>' is not a function or function pointer
v28 = insn_data_0[v46].genfun( operand0, operand1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2526:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v30 = mode_class_0[v10]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2537:22: error: use of undeclared identifier 'machine_mode'
v34 = gen_reg_rtx( ( machine_mode)i); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/optabs.c:2538:22: error: use of undeclared identifier 'machine_mode'
v38 = gen_reg_rtx( ( machine_mode)v33); 
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_twoval_binop/src/obj/optabs.o] Error 1
